Project Dashboard/src/objects/ProjDash_Project__c.object
<CustomObject>
    <description>ProjDash - This custom object holds all project records used for project dashboard</description>
    <fields>
        <fullName>Accomplishments__c</fullName>
        <description>Project Accomplishments</description>
        <inlineHelpText>Please enter individual Accomplishments on a separate line</inlineHelpText>
        <label>Accomplishments</label>
        <length>600</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Action_Items__c</fullName>
        <description>Project Action Items</description>
        <inlineHelpText>Please enter individual Action Items on a separate line</inlineHelpText>
        <label>Action Items</label>
        <length>600</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Blockers__c</fullName>
        <description>Project blockers</description>
        <inlineHelpText>Please enter individual Blockers on a separate line</inlineHelpText>
        <label>Blockers</label>
        <length>600</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Collaborator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collaborator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Initiatives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deadline__c</fullName>
        <label>Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description_and_Key_Elements__c</fullName>
        <label>Description and Key Elements</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Domain__c</fullName>
        <label>Domain</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Federal Government</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Escalations__c</fullName>
        <label>Escalations</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Funding_Source_and_Needs__c</fullName>
        <label>Funding Source and Needs</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Key_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether or not a Project is  &apos;Top 3&apos; Key Project</description>
        <label>Key Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Stakeholders__c</fullName>
        <label>Other Stakeholders</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <formula>Owner:User.FirstName  &amp; &quot; &quot; &amp;  Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phase 1</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Phase 2</fullName>
                </value>
                <value>
                    <fullName>Phase 3</fullName>
                </value>
                <value>
                    <fullName>Phase 4</fullName>
                </value>
                <value>
                    <fullName>Close-Out/Close</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pulse_Approved_Date__c</fullName>
        <description>Displays the date of the most recent approved Pulse record on a Project</description>
        <label>Pulse Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stakeholders__c</fullName>
        <label>Stakeholders</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OMB</fullName>
                </value>
                <value>
                    <fullName>NSC</fullName>
                </value>
                <value>
                    <fullName>DHS</fullName>
                </value>
                <value>
                    <fullName>DNI</fullName>
                </value>
                <value>
                    <fullName>DoD</fullName>
                </value>
                <value>
                    <fullName>GSA</fullName>
                </value>
                <value>
                    <fullName>NIST</fullName>
                </value>
                <value>
                    <fullName>NCCoE</fullName>
                </value>
                <value>
                    <fullName>USDS</fullName>
                </value>
                <value>
                    <fullName>IRS</fullName>
                </value>
                <value>
                    <fullName>VA</fullName>
                </value>
                <value>
                    <fullName>SSA</fullName>
                </value>
                <value>
                    <fullName>DOC</fullName>
                </value>
                <value>
                    <fullName>OSTP</fullName>
                </value>
                <value>
                    <fullName>NEC</fullName>
                </value>
                <value>
                    <fullName>DOE</fullName>
                </value>
                <value>
                    <fullName>Federal Civilian Agencies</fullName>
                </value>
                <value>
                    <fullName>All Agencies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Project Status</description>
        <inlineHelpText>Project Status</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On Track</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>At Risk</fullName>
                </value>
                <value>
                    <fullName>Past Due</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All_Projects</fullName>
        <columns>NAME</columns>
        <columns>Phase__c</columns>
        <columns>Status__c</columns>
        <columns>Key_Project__c</columns>
        <columns>Owner_Name__c</columns>
        <columns>Deadline__c</columns>
        <columns>Pulse_Approved_Date__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Projects</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>